# Interactive-Learning-of-Temporal-Features-for-Control-TF2

./: README.md  pyproject.toml
gym/envs/classic_control/: continuous_cartpole.py
src/: main2.py  main_init2.py  neural_network2.py  transition_model2.py
src/agents/: BDCOACH2.py  DCOACH2.py  HG_DAgger.py  selector2.py
src/config_files/: carpole_BD-COACH_lowdim.ini  carpole_DCOACH_lowdim.ini  pendulum_BD-COACH_lowdim.ini  pendulum_DCOACH_lowdim.ini
src/tools/: functions.py
