
[tool.poetry]
name = "your_project_name"
version = "0.1.0"
description = "Your project description"
authors = ["Your Name <your@email.com>"]

[tool.poetry.dependencies]
python = "^3.8"
setuptools = "38.5.1"
numpy = "*"
opencv-python = "*"
matplotlib = "*"
pyglet = "*"

[tool.poetry.dev-dependencies]
gym = { version = "0.17.3"}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

